--- a/javascript/Proyecto/Reloj.html
+++ b/javascript/Proyecto/Reloj.html
@@ -30,6 +30,7 @@
 
     <!--Mis Scripts-->
     <script type="text/javascript" src="js/reloj.js"></script>
+    <script type="text/javascript" src="js/about.js"></script>
 </head>
 
 <body>
@@ -74,11 +75,17 @@
                     <h4><span>identifícate</span></h4>
                     <form action="">
                         <label for='name'>Nombre</label>
+                        <br>
                         <input type="text" name="name" id='form_name'>
+                        <br>
                         <label for='email'>Correo</label>
+                        <br>
                         <input type="text" name="email" id='form_email'>
+                        <br>
                         <label for='password'>Pasword</label>
+                        <br>
                         <input type="password" name="password" id='form_password'>
+                        <br>
                         <input type="submit" value="Entrar" id='boton_entrar'>
                     </form>
                 </div>
